--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="app" class="no-js"> <!--<![endif]-->
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Spring boot and Angularjs Tutorial</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/app.css">
+    <title>My first Angular Application</title>
+    <script src="https://code.angularjs.org/1.2.13/angular.js"></script>
+    <script src="https://code.angularjs.org/1.2.13/angular-resource.js"></script>
+    <script src = "notes.js"></script>
 </head>
-<body>
-<h2>Administrator Panel</h2>
-<div class="home-section">
-    <ul class="menu-list">
-        <li><a href="#/users">Users</a></li>
-        <li><a href="#/roles">Roles</a></li>
-    </ul>
-</div>
-<div ng-view></div>
-<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
-<script src="/js/app.js"></script>
-<script src="/js/controller.js"></script>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+<body ng-controller = "NotesController">
+	Your name: <input ng-model = "username"><button ng-click = "update()">Update</button>
+	<div ng-repeat = "note in notes" style="background-color:#EEE;padding:5px;width: 300px">
+		<p>The Id is {{note.id}}}} </p>
+		<p> the contest is {{note.text}}}</p>
+	</div>
+	Add Note <br>
+	<textarea rows="10" cols="50" ng-model = "text"></textarea>
+	<button ng-click = "add()">Add Notes</button>
+	
+	
 </body>
 </html>
